<resources>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="have_not_account">Have Not Account?</string>
    <string name="register_here">Register Here</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Name</string>
    <string name="save">Save</string>
    <string name="medicine_name">Medicine Name</string>
</resources>