<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignIn">

    <View
        android:id="@+id/quarterCircleView"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:background="@drawable/circle_shape"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/quarterCircleView"
        android:paddingStart="30dp"
        android:orientation="vertical"
        android:paddingEnd="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:text="@string/welcome"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/login"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Email"
            android:layout_marginTop="20dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/phoneNumberEditText"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Password"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordEditText"
                android:inputType="textPassword"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="18sp"
            android:id="@+id/loginId"/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:text="@string/have_not_account"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:id="@+id/registrationTVId"
            android:textColor="@color/mainColor"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/register_here"
            android:textStyle="bold"/>
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"
        android:id="@+id/loadingAnimationId"
        app:lottie_rawRes="@raw/loading"/>
</RelativeLayout>