<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/main_color">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="Add Medicine"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/medicine_name"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_med_name"
                android:inputType="text"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Description"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_med_qty"
                android:inputType="text"
                android:textSize="16sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"

        android:orientation="horizontal">
        <Button
            android:id="@+id/add_med_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Time"
            android:backgroundTint="@color/main_color"
            android:drawableLeft="@drawable/baseline_timer_24"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/radius_main"
            android:text="Repeat"
            android:textSize="16sp" />
        <Switch
            android:id="@+id/repeat_switch"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            />

    </LinearLayout>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:chipSpacingHorizontal="0dp"

        >

        <com.google.android.material.chip.Chip
            android:id="@+id/sunday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"
            android:textSize="12sp"
             />

        <com.google.android.material.chip.Chip
            android:id="@+id/monday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tuesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/wednesday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="W"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/thursday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/friday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"
            android:textSize="12sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/saturday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S"
            android:textSize="12sp" />

    </com.google.android.material.chip.ChipGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:weightSum="2">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:backgroundTint="@color/main_color"
                android:id="@+id/cancel_button"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/main_color"
                android:text="@string/save"
                android:layout_marginStart="5dp"
                android:id="@+id/save_button"/>
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</LinearLayout>